[gd_scene load_steps=10 format=3 uid="uid://b0d4g6sokerlo"]

[ext_resource type="Script" path="res://Scripts/levelThreeVictory.gd" id="1_4khv0"]
[ext_resource type="FontFile" uid="uid://8gqfq5jfyc7p" path="res://Assets/Fonts/GothicPixels.ttf" id="2_24d2h"]
[ext_resource type="FontFile" uid="uid://bqyafdxot38ao" path="res://Assets/Fonts/Kouryuu.ttf" id="3_075l2"]
[ext_resource type="Texture2D" uid="uid://bi860xh8y7qel" path="res://Assets/Outline.png" id="4_8a23q"]
[ext_resource type="Texture2D" uid="uid://cis13iwxsoor5" path="res://Skull_HD.png" id="5_w4fvp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2ibb"]
bg_color = Color(0.705887, 0.705887, 0.705887, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17ans"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1qxey"]
bg_color = Color(0.212305, 0.212305, 0.212305, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlyg1"]

[node name="L1Victory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4khv0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d2ibb")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.0
offset_top = -229.0
offset_right = 454.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.760784, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.140447, 0.140447, 0.140447, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = -10
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_24d2h")
theme_override_font_sizes/font_size = 100
text = "Juego completado"

[node name="Time" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -112.0
offset_right = 135.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_075l2")
theme_override_font_sizes/font_size = 30
text = "Tu tiempo: 00:00"

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(647, 315)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_8a23q")
centered = false

[node name="Sprite2D5" type="Sprite2D" parent="."]
position = Vector2(524, 315)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_8a23q")
centered = false

[node name="Sprite2D6" type="Sprite2D" parent="."]
position = Vector2(405, 315)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_8a23q")
centered = false

[node name="ButtonContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -144.0
offset_right = 104.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonContainer"]
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="ButtonContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_075l2")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_17ans")
theme_override_styles/hover = SubResource("StyleBoxFlat_1qxey")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rlyg1")
text = " Menu principal "

[node name="RestartButton" type="Button" parent="ButtonContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_075l2")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_17ans")
theme_override_styles/hover = SubResource("StyleBoxFlat_1qxey")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rlyg1")
text = " Reintentar "

[node name="SpriteContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 405.0
offset_top = 315.0
offset_right = 445.0
offset_bottom = 355.0

[node name="HBoxContainer" type="HBoxContainer" parent="SpriteContainer"]
layout_mode = 2

[node name="Sprite1" type="Sprite2D" parent="SpriteContainer/HBoxContainer"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_w4fvp")
centered = false

[node name="Sprite2" type="Sprite2D" parent="SpriteContainer/HBoxContainer"]
position = Vector2(119, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_w4fvp")
centered = false

[node name="Sprite3" type="Sprite2D" parent="SpriteContainer/HBoxContainer"]
position = Vector2(242, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_w4fvp")
centered = false

[connection signal="pressed" from="ButtonContainer/VBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="ButtonContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
